@@ -80,6 +80,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #4524: distutils build_script command failed with --with-suffix=3.
+  Initial patch by Amaury Forgeot d'Arc.
+
 - Issue #4998: The memory saving effect of __slots__ had been lost on Fractions
   which inherited from numbers.py which did not have __slots__ defined.  The
   numbers hierarchy now has its own __slots__ declarations.
